<resources>
    <string name="app_name">SpaceX</string>
    <string name="name">Имя:</string>
    <string name="count">счетчик ступений:</string>
    <string name="date">дата запуска:</string>
    <string name="success">Успешно</string>
    <string name="fail">Провал</string>
    <string name="status">Статус миссии:</string>
    <string name="load_error">Проверьте состояние сети\nи перзагрузите страницу свайпом внмз</string>
    <string name="not_info">Нет иформации по экипажу</string>
    <string name="crew">Экипаж:</string>
    <string name="description">Описание:</string>
    <string name="fio">ФИО:</string>
    <string name="status_crew">Статус:</string>
    <string name="agency">Агенство:</string>

</resources>